[package]
name = "desktop_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

base64="0.21.5"
aes-gcm="0.10.3"
pbkdf2="0.12.2"
sha2="0.10.8"
argon2="0.5.2"
rand="0.8.5"

anyhow="1.0.75"
arboard="3.2.1"
clap = { version = "4.4.7", features = ["derive"] }
derive-getters="0.3.0"
dirs="5.0.1"
enigo="0.1.3"
global-hotkey="0.4.0"
lazy_static="1.4.0"
notify-rust="4.9.0"
reqwest={version="0.11.22", features=["blocking", "rustls-tls"]}
serde={version="1.0.190", features=["derive"]}
serde_json="1.0.108"
toml="0.8.6"

