[package]
name = "desktop_client"
version = "0.1.2"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

base64="0.21"
aes-gcm="0.10"
pbkdf2="0.12"
sha2="0.10"
argon2="0.5"
rand="0.8"

anyhow="1.0"
arboard="3.3"
clap = { version = "4.4", features = ["derive"] }
derive-getters="0.3"
dirs="5.0"
enigo="0.1"
global-hotkey="0.4"
notify-rust="4.9"
reqwest={version="0.11", features=["blocking", "rustls-tls"]}
serde={version="1.0", features=["derive"]}
serde_json="1.0"
toml="0.8"
winit="0.29"

