[package]
name = "server"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow="1.0.75"
axum="0.6.20"
axum-server={version="0.5.1", features=["tls-rustls"]}
lazy_static="1.4.0"
redis={version="0.23.3", features=["tokio-comp"]}
regex="1.10.2"
tokio = { version = "1.33.0", features = ["full"] }
tracing="0.1.40"
tracing-subscriber="0.3.17"

