[package]
name = "server"
version = "0.1.2"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow="1.0"
axum="0.8"
axum-server={version="0.7", features=["tls-rustls"]}
redis={version="0.23", features=["tokio-comp"]}
regex="1.11"
tokio = { version = "1.43", features = ["full"] }
tracing="0.1"
tracing-subscriber="0.3"

